Artifact file download by ID
